Implementation for issue: Make the deadline more visible #148

--- a/core/static/css/layout.css
+++ b/core/static/css/layout.css
@@ -682,3 +682,13 @@ html {
   height: 50px;
   background: linear-gradient(rgba(255,255,255,0),#fff);
 }
+
+.due-date{
+    color: #769739;
+    font-weight: bold;
+}
+
+.due-date-close{
+    color: #d01818;
+    font-weight: bold;
+}
